@@ -1,0 +1,6 @@
+package org.ztemplates.render;
+
+public interface ZIRenderDecorator
+{
+  public String decorate(String val);
+}
