@@ -9,6 +9,7 @@ snapshot available from [https://oss.sonatype.org/content/repositories/snapshots
 
 __ztemplates-3.0.0-SNAPSHOT (Not yet released)__ 
 
+* added ZIRenderDecorator to annotation @ZRender to allow a decorator to be called when exposing with render=true
 * added support for ZFormMap in forms, to allow dynamic forms.
 * added support for ZForm to allow dynamic forms.
 * modified ZProperty, ZSelectProperty and ZFormSelect to use ZIFormatter and ZIMarshaller
